# Sniper

./: .gitignore  Cargo.toml  README.md
.claude/: launch.json
docs/: architecture.md  index.html
packaging/macos/: AppIcon.icns  Info.plist  make-app.sh  make-dmg.sh  release-macos.sh
packaging/skills/claude/sniper-operator/: SKILL.md
packaging/skills/codex/sniper-operator/: SKILL.md
src/: api.rs  certificate.rs  config.rs  event_log.rs  fuzzer.rs  intercept.rs  intruder.rs  lib.rs  main.rs  match_replace.rs  model.rs  oast.rs  proxy.rs  runtime.rs  runtime_state.rs  scanner.rs  sequence.rs  session.rs  skills.rs  special_host.rs  state.rs  store.rs  target.rs  ui_settings.rs  websocket.rs  workspace.rs  ws_replay.rs
tests/: https_mitm.rs  proxy_capture.rs  regressions.rs  special_host_https.rs
web/: app.js  codemirror.bundle.js  index.html  styles.css
web/decoder/: hasher.js  index.html
web/decoder/lib/: textarea.js
