[package]
name = "sniper"
version = "0.1.8"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.7"
base64 = "0.22"
brotli = "8.0.2"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1.9"
futures-core = "0.3"
futures-util = "0.3"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "server", "tokio"] }
indexmap = "=2.7.1"
rcgen = { version = "=0.13.2", features = ["x509-parser"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rust-embed = "8.8"
rustls = "=0.21.12"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tao = "0.29"
time = "=0.3.36"
tokio = { version = "1.44", features = ["full"] }
tokio-rustls = "=0.24.1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "=2.5.0"
uuid = { version = "=1.16.0", features = ["serde", "v4"] }
webbrowser = "1.0"
wry = "=0.45.0"
zstd = "0.13.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
